--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 anyio==3.6.1
+async-timeout==4.0.2
+attrs==21.4.0
 black==22.6.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
 fastapi==0.79.0
+frozenlist==1.3.0
 h11==0.13.0
 idna==3.3
+multidict==6.0.2
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
 pydantic==1.9.1
+requests==2.28.1
+rqdb==1.0.3
 sniffio==1.2.0
 starlette==0.19.1
 tomli==2.0.1
 typing_extensions==4.3.0
+urllib3==1.26.11
 uvicorn==0.18.2
+yarl==1.7.2
