--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,19 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+Deprecated==1.2.13
 fastapi==0.79.0
 frozenlist==1.3.0
 h11==0.13.0
 idna==3.3
 multidict==6.0.2
 mypy-extensions==0.4.3
+packaging==21.3
 pathspec==0.9.0
 platformdirs==2.5.2
 pydantic==1.9.1
+pyparsing==3.0.9
+redis==4.3.4
 requests==2.28.1
 rqdb==1.0.3
 sniffio==1.2.0
@@ -25,4 +29,5 @@ tomli==2.0.1
 typing_extensions==4.3.0
 urllib3==1.26.11
 uvicorn==0.18.2
+wrapt==1.14.1
 yarl==1.7.2
