--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,5 @@ jobs:
       - name: trigger-deploy
         env: 
           TOKEN: ${{ secrets.EZPBARS_DEPLOYMENT_SECRET }}
-        run: curl -XPOST -H "Content-Type: application/json" https://ezpbars.com/api/1/continuous_deployment/update -d '{"repo":"backend"}' -H "authorization: $TOKEN"
+        run: 
+          - curl -XPOST -H "Content-Type: application/json" https://ezpbars.com/api/1/continuous_deployment/update -d '{"repo":"backend"}' -H "authorization: $TOKEN"
