--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ async-timeout==4.0.2
 attrs==21.4.0
 black==22.6.0
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+cryptography==37.0.4
 Deprecated==1.2.13
 fastapi==0.79.0
 frozenlist==1.3.0
@@ -18,7 +20,9 @@ mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.9.0
 platformdirs==2.5.2
+pycparser==2.21
 pydantic==1.9.1
+PyJWT==2.4.0
 pyparsing==3.0.9
 redis==4.3.4
 requests==2.28.1
